--- a/home1.html
+++ b/home1.html
@@ -12,7 +12,7 @@
  {
  	background-image: url(lbsimds.jpg); 
  	background-repeat: no-repeat;
- 	magin:auto;
+ 	margin:auto;
 
 background-size: cover;
 
