--- a/Registration.html
+++ b/Registration.html
@@ -10,7 +10,7 @@
  {
  	background-image: url(lbsimds.jpg); 
  	background-repeat: no-repeat;
- 	magin:auto;
+ 	margin:auto;
 background-size: cover;
 
 
@@ -26,7 +26,7 @@ background-size: cover;
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-  <a class="navbar-brand" href="home.HTML">Home</a>
+  <a class="navbar-brand" href="home1.html">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
