--- a/Login.html
+++ b/Login.html
@@ -10,7 +10,7 @@
  {
   background-image: url(lbsimds.jpg); 
   background-repeat: no-repeat;
-  magin:auto;
+  margin:auto;
 background-size: cover;
 
 
